# local-events-newsletter-printer

./: .gitignore  .mcp.json  CLAUDE.md  NOTES.md  README.md  generate_newsletter.py  publish_to_beehiiv.py  pyproject.toml  run_newsletter.bat
.claude-plugin/: plugin.json
agents/: event-curator.md  newsletter-writer.md  source-fetcher.md
commands/: newsletter.md  setup.md  sources.md
config/: example.yaml
servers/event_mcp/: __init__.py  __main__.py  dedup.py  models.py  template_engine.py
servers/event_mcp/config/: __init__.py  migrator.py
servers/event_mcp/resilience/: __init__.py  circuit_breaker.py  fallback.py  health.py  retry.py
servers/event_mcp/sources/: __init__.py  firecrawl.py  instagram.py  serpapi.py  url_validator.py  web_scraper.py
templates/: beehiiv_email.html  default.md
tests/: conftest.py
tests/fixtures/: sample_events.json  serpapi_response.json
tests/resilience/: test_circuit_breaker.py  test_fallback.py  test_health.py  test_retry.py
tests/unit/: test_dedup.py  test_firecrawl.py  test_models.py  test_template.py  test_url_validation.py
